--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.54.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "hyphenopoly": "^6.0.0",
